feat: docker compose with traefic + 3xFE + Postgres (+- local SSL)
multi-step dockerfile FE, docker-compose traefix + FE + Postgres work both in local ssl with override and without ssl, load balancing for 3 FE replica, next is ssl on VPS

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,8 @@ Thumbs.db
 .github/instructions/nx.instructions.md
 
 .angular
+.env
+*password.txt
+
+# Ignore locally generated SSL certificates
+/certs
