--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,28 @@
-node_modules
-.git
-.gitignore
 Dockerfile
 README.md
 *.log
 .angular
+
+# Git
+.git
+.gitignore
+
+# Node
+node_modules
+
+# Nx
+.nx/cache
+dist
+tmp
+
+# OS-spezifisch
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode
+.idea
+
+.env
+*password.txt
+/certs
