feat: docker-compose with working traefik dashboard secured by basic auth

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,15 @@
 # Reverse Proxy
 TRAEFIK_ACME_EMAIL=your-email@example.com
-TRAEFIK_HTTP_HOST=your-domain.com
+TRAEFIK_HTTP_RULE=Host(`your-domain.com`) || Host(`www.your-domain.com`)
+# AUTH Dashboard
+# user -> echo $(htpasswd -Bnb your_username your_password) | sed -e 's/\$/\$\$/g'
+TRAEFIK_AUTH_USER=your_username
 
 # Database
 POSTGRES_USER=your_postgres_user
 POSTGRES_DB=your_postgres_db
 POSTGRES_PASSWORD_FILE=/path/to/your/postgres_password
 
-# Frontend
-LOG_REQUESTS=true
-DEBUG=*
+# Frontend - Debug
+LOG_REQUESTS=false #true
+DEBUG= #*
