--- a/error_docker-compose.override.yml
+++ b/error_docker-compose.override.yml
@@ -2,13 +2,21 @@ services:
   reverse-proxy:
     command:
       - "--log.level=DEBUG"
-      - "--api.insecure=true"
+      # - "--api.insecure=true"
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
       - "--entrypoints.web.address=:80"
       - "--entrypoints.websecure.address=:443"
       - "--providers.file.directory=/etc/traefik/dynamic"
       - "--providers.file.watch=true"
+      # - "--entrypoints.web.http.redirections.entrypoint.to=websecure"
+      # - "--entrypoints.web.http.redirections.entrypoint.scheme=https"
+      - "--api.dashboard=true"
+    labels:
+      traefik.enable: "true"
+      traefik.http.routers.api.entrypoints: "web,websecure"
+      traefik.http.routers.api.tls: "true"
+      traefik.http.routers.api.tls.certresolver: ""  # override & effectively disable ACME for this env
     volumes:
       - ./certs/cert.pem:/etc/traefik/certs/cert.pem:ro
       - ./certs/key.pem:/etc/traefik/certs/key.pem:ro
@@ -18,7 +26,7 @@ services:
   frontend:
     labels:
       traefik.enable: "true"
-      traefik.http.routers.frontend.rule: "Host(`frontend.my-app.localhost`)"
+      traefik.http.routers.frontend.rule: "Host(`localhost`)"
       traefik.http.services.frontend.loadbalancer.server.port: "4000"
       traefik.http.routers.frontend.entrypoints: "websecure"
       traefik.http.routers.frontend.tls: "true"
