feat:  add spring boot backend with pom, application.yaml, db connection, working with docker compose-dev, postgres gets local port for ssh, now trying backend in prod with tls

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,18 @@
 # Reverse Proxy
 TRAEFIK_ACME_EMAIL=your-email@example.com
 TRAEFIK_HTTP_RULE=Host(`your-domain.com`) || Host(`www.your-domain.com`)
+TRAEFIK_HTTP_BACKEND_RULE=Host(`api.your-domain.com`)
 # AUTH Dashboard
 # user -> echo $(htpasswd -Bnb your_username your_password) | sed -e 's/\$/\$\$/g'
 TRAEFIK_AUTH_USER=your_username
 
 # Database
-POSTGRES_USER=your_postgres_user
+POSTGRES_HOST=postgres:5432 # use 'localhost:5555' for local development with a local Postgres instance
 POSTGRES_DB=your_postgres_db
+POSTGRES_SCHEMA=mysite
+POSTGRES_USER=your_postgres_user
 POSTGRES_PASSWORD_FILE=/path/to/your/postgres_password
+
 
 # Frontend - Debug
 LOG_REQUESTS=false #true
