--- a/package.json
+++ b/package.json
@@ -31,39 +31,40 @@
     "@nx/devkit": "21.4.1",
     "@nx/eslint": "21.4.1",
     "@nx/eslint-plugin": "21.4.1",
-    "@nx/jest": "21.4.1",
+    "@nx/jest": "^21.4.1",
     "@nx/js": "21.4.1",
     "@nx/playwright": "21.4.1",
     "@nx/web": "21.4.1",
     "@nx/workspace": "21.4.1",
+    "@nxrocks/nx-spring-boot": "^11.0.1",
     "@playwright/test": "^1.36.0",
     "@schematics/angular": "~20.1.0",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/express": "^4.17.21",
+    "@types/jest": "^30.0.0",
     "@types/node": "20.19.9",
     "@typescript-eslint/utils": "^8.29.0",
     "angular-eslint": "^20.0.0",
+    "autoprefixer": "^10.4.0",
+    "daisyui": "^4.12.10",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
     "eslint-plugin-playwright": "^1.6.2",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "jest-util": "^29.7.0",
-    "@types/jest": "^29.5.0",
-    "jest-preset-angular": "~15.0.0",
+    "jest": "^30.1.3",
+    "jest-environment-jsdom": "^30.1.2",
+    "jest-preset-angular": "^15.0.0",
+    "jest-util": "^30.0.5",
     "nx": "21.4.1",
+    "postcss": "^8.4.5",
     "prettier": "^2.6.2",
+    "tailwindcss": "^3.0.2",
     "ts-jest": "^29.4.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.8.2",
-    "typescript-eslint": "^8.29.0",
-    "tailwindcss": "^3.0.2",
-    "postcss": "^8.4.5",
-    "autoprefixer": "^10.4.0",
-    "daisyui": "^4.12.10",
-    "@tailwindcss/typography": "^0.5.16"
+    "typescript-eslint": "^8.29.0"
   }
 }
