add basic auth to backend for now

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -88,6 +88,8 @@ services:
       # --- Rule for HTTPS ---
       traefik.http.routers.backend.entrypoints: "websecure"
       traefik.http.routers.backend.tls.certresolver: "letsencrypt"
+      # AUTH
+      traefik.http.routers.backend.middlewares: "auth"
     restart: unless-stopped
     deploy:
       mode: replicated
