--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -21,6 +21,11 @@ jobs:
         uses: actions/checkout@v4
         # Downloads your GitHub repository's files onto the runner.
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        # Sets up Docker Buildx, which is an advanced build tool for Docker.
+        # This is necessary for building multi-platform images and using advanced caching.
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -66,6 +71,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         # Checks out your repository code so the workflow can access it.
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        # Sets up Docker Buildx, which is an advanced build tool for Docker.
+        # This is necessary for building multi-platform images and using advanced caching.
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
