feat: add deployment workflows and health checks for frontend and backend services

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,7 @@ POSTGRES_PASSWORD_FILE=/path/to/your/postgres_password
 # Frontend - Debug
 LOG_REQUESTS=false #true
 DEBUG= #*
+
+# VPS project root folder
+DEPLOY_PATH=/path/to/your/project
+DOCKERHUB_USERNAME=your_dockerhub_username
