--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,53 +43,6 @@ services:
       - "traefik.http.middlewares.myauth.basicauth.users=${TRAEFIK_AUTH_USER}" # AUTH Dashboard
     restart: unless-stopped
 
-  frontend:
-    build:
-      context: .
-      dockerfile: apps/mysite-frontend/Dockerfile.prod
-    environment:
-      - LOG_REQUESTS=${LOG_REQUESTS}
-      - DEBUG=${DEBUG}
-    # (ensure app listens on 0.0.0.0:4000)
-    networks:
-      - web # So Traefik can reach it
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.frontend.rule=${TRAEFIK_HTTP_RULE}"
-      - "traefik.http.services.frontend.loadbalancer.server.port=4000"
-      - "traefik.docker.network=web"
-      - "traefik.http.routers.frontend.entrypoints=web,websecure" # remove websecure
-      # - "traefik.http.routers.frontend.tls.certresolver=myresolver"
-    restart: unless-stopped
-    deploy:
-      mode: replicated
-      replicas: 1
-
-  backend:
-    build:
-      context: .
-      dockerfile: apps/mysite-backend/Dockerfile
-    environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_DB=${POSTGRES_DB}
-      - POSTGRES_HOST=postgres
-      - POSTGRES_PASSWORD_FILE=/run/secrets/db-password
-    secrets:
-      - db-password
-    networks:
-      - backend
-      - database
-      # - web
-    depends_on:
-      postgres:
-        condition: service_healthy
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.backend.rule=${TRAEFIK_HTTP_BACKEND_RULE}"
-      - "traefik.docker.network=backend" # web before backend
-      - "traefik.http.services.backend.loadbalancer.server.port=8200"
-    restart: unless-stopped
-
   postgres:
     image: postgres:16.10-alpine
     environment:
@@ -113,9 +66,98 @@ services:
       retries: 5
     restart: unless-stopped
 
-secrets:
-  db-password:
-    file: ${POSTGRES_PASSWORD_FILE}
+  backend:
+    build:
+      context: .
+      dockerfile: apps/mysite-backend/Dockerfile
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_HOST=postgres
+      - POSTGRES_PASSWORD_FILE=/run/secrets/db-password
+    secrets:
+      - db-password
+    networks:
+      - backend
+      - database
+      # - web
+    depends_on:
+      postgres:
+        condition: service_healthy
+    labels:
+      - "traefik.enable=true"
+      - "traefik.docker.network=backend"
+
+      # Define a single service for the backend, including health check
+      - "traefik.http.services.backend-svc.loadbalancer.server.port=8200"
+      - "traefik.http.services.backend-svc.loadbalancer.healthcheck.path=/management/health/readiness"
+      - "traefik.http.services.backend-svc.loadbalancer.healthcheck.interval=10s"
+
+      # Define the IP whitelist middleware for internal traffic
+      - "traefik.http.middlewares.internal-ips.ipwhitelist.sourcerange=10.0.0.0/8, 172.16.0.0/12, 192.168.0.0/16"
+
+      # Router 1: Public route for the API.
+      # This rule assumes your API endpoints are prefixed with /api. Adjust if needed.
+      - "traefik.http.routers.backend-public.rule=${TRAEFIK_HTTP_BACKEND_RULE}"
+      - "traefik.http.routers.backend-public.entrypoints=web"
+      - "traefik.http.routers.backend-public.service=backend-svc"
+
+      # Router 2: Private route for management endpoints, protected by the IP whitelist.
+      - "traefik.http.routers.backend-private.rule=(${TRAEFIK_HTTP_BACKEND_RULE}) && PathPrefix(`/management`)"
+      - "traefik.http.routers.backend-private.entrypoints=web"
+      - "traefik.http.routers.backend-private.service=backend-svc"
+      - "traefik.http.routers.backend-private.middlewares=internal-ips"
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8200/management/health/liveness"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
+    deploy:
+      mode: replicated
+      replicas: 3  # Add 3 replicas for zero-downtime
+      update_config:
+        parallelism: 1        # Only 1 replica updates at a time
+        delay: 10s            # 10 seconds between replica updates
+        order: start-first    # v2 starts, health check passes, then v1 stops
+        failure_action: rollback  # If v2 fails, shut down v2, keep v1 running
+
+  frontend:
+    build:
+      context: .
+      dockerfile: apps/mysite-frontend/Dockerfile.prod
+    environment:
+      - LOG_REQUESTS=${LOG_REQUESTS}
+      - DEBUG=${DEBUG}
+    # (ensure app listens on 0.0.0.0:4000)
+    networks:
+      - web # So Traefik can reach it
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.frontend.rule=${TRAEFIK_HTTP_RULE}"
+      - "traefik.http.services.frontend.loadbalancer.server.port=4000"
+      - "traefik.docker.network=web"
+      - "traefik.http.routers.frontend.entrypoints=web"
+      # - "traefik.http.routers.frontend.tls.certresolver=myresolver"
+      # Add health checks for zero-downtime
+      - "traefik.http.services.frontend.loadbalancer.healthcheck.path=/healthz"
+      - "traefik.http.services.frontend.loadbalancer.healthcheck.interval=10s"
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "node", "-e", "require('http').get('http://localhost:4000/healthz', (res) => process.exit(res.statusCode == 200 ? 0 : 1))"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
+    deploy:
+      mode: replicated
+      replicas: 3  # Increase to 3 for zero-downtime
+      update_config:
+        parallelism: 1        # Only 1 replica updates at a time
+        delay: 10s            # 10 seconds between replica updates
+        order: start-first    # v2 starts, health check passes, then v1 stops
+        failure_action: rollback  # If v2 fails, shut down v2, keep v1 running
 
 # Isolate database network
 networks:
@@ -132,3 +174,7 @@ networks:
 volumes:
   letsencrypt:
   db-data:
+
+secrets:
+  db-password:
+    file: ${POSTGRES_PASSWORD_FILE}
