fix: gha deploy.sh remove unnecessary services/pulls

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -99,4 +99,5 @@ jobs:
             export FRONTEND_TAG=${{ needs.build-and-push-frontend.outputs.image_tag }}
             export BACKEND_TAG=${{ needs.build-and-push-backend.outputs.image_tag }}
             cd ${{ secrets.DEPLOY_PATH }}
+            chmod +x ./deploy.sh
             ./deploy.sh
