fix: CI/CD merge conflict for +x deploy.sh

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -99,5 +99,8 @@ jobs:
             export FRONTEND_TAG=${{ needs.build-and-push-frontend.outputs.image_tag }}
             export BACKEND_TAG=${{ needs.build-and-push-backend.outputs.image_tag }}
             cd ${{ secrets.DEPLOY_PATH }}
+            git pull
             chmod +x ./deploy.sh
             ./deploy.sh
+            chmod -x ./deploy.sh
+
