--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "@angular/platform-server": "~20.1.0",
     "@angular/router": "~20.1.0",
     "@angular/ssr": "~20.1.0",
+    "@fortawesome/angular-fontawesome": "^3.0.0",
+    "@fortawesome/free-brands-svg-icons": "^7.0.1",
+    "@fortawesome/free-regular-svg-icons": "^7.0.1",
+    "@fortawesome/free-solid-svg-icons": "^7.0.1",
     "express": "^4.21.2",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
