--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "nx": "21.4.1",
     "postcss": "^8.4.5",
     "prettier": "^2.6.2",
+    "prettier-plugin-tailwindcss": "^0.5.0",
     "tailwindcss": "^3.0.2",
     "ts-jest": "^29.4.0",
     "ts-node": "10.9.1",
