add base for documentation and additional folder structure

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
+# Usage Instructions:
+# 1. Make a copy of this file and name it ".env"
+# 2. Replace the placeholder values with your actual configuration details.
+# 3. This .env file is used by Docker Compose to configure the services.
+#    It should not be committed to version control.
+
 # Reverse Proxy
 TRAEFIK_ACME_EMAIL=your-email@example.com
 TRAEFIK_HTTP_RULE=Host(`your-domain.com`) || Host(`www.your-domain.com`)
