add cors tp spring boot backend

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,12 @@ POSTGRES_PASSWORD_FILE=/path/to/your/postgres_password
 LOG_REQUESTS=false #true
 DEBUG= #*
 
+# Backend - Debug
+CONTROLLER_LOGGING_ASPECT_LEVEL=ERROR
+CONTROLLER_LOGGING_REQUEST_ARGS=false #true
+SERVICE_LOGGING_ASPECT_LEVEL=ERROR
+SERVICE_LOGGING_REQUEST_ARGS=false #true
+
 # VPS project root folder
 DEPLOY_PATH=/path/to/your/project
 DOCKERHUB_USERNAME=your_dockerhub_username
